--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "md5": "^2.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
+    "react-devtools": "^5.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
     "sass": "^1.51.0",
